--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@types/react-router-dom": "^4.3.4",
     "antd": "^3.19.6",
     "axios": "^0.19.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "react-spring": "^8.0.25",
     "react-use-gesture": "^5.1.2",
     "redux": "^4.0.1",
